...
        android:text="Steps"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingridient_recycler_view"
        app:layout_constraintBottom_toTopOf="@+id/recipe_steps_recycler_view"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_steps_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
